dev/test_programs/VALID/group3/while.go
package main

func main() {
	for {
		print(1)
	}
}
