dev/test_programs/INVALID/group12/scan_parse_errors/missing_semi_error.go
// missing semicolon in for condition

package main;

func main() {
	for i:=0 i<2; i++ {
        print();
    };
};